# EasyAna

./: CMakeLists.txt  README.md  setup.py
FastAnalysis/: utils.py
config/: make_hist_sherpa.yaml
scripts/: construct_ray_cluster  define_tasks  make_Hmumu_hist  make_Hmumu_hist_h5  make_Hmumu_hist_mpi  ray_sync  raydistribute  test_mpi  test_ray
src/: CMakeLists.txt  runRDataFrame.cpp  runTTreeMT.cpp  runTTreeReader.cpp
