ADD_EXECUTABLE(runTTreeReader)
TARGET_SOURCES(runTTreeReader PRIVATE runTTreeReader.cpp)
TARGET_INCLUDE_DIRECTORIES(runTTreeReader PRIVATE ${ROOT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(runTTreeReader ${ROOT_LIBRARIES})

ADD_EXECUTABLE(runTTreeMT)
TARGET_SOURCES(runTTreeMT PRIVATE runTTreeMT.cpp)
TARGET_INCLUDE_DIRECTORIES(runTTreeMT PRIVATE ${ROOT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(runTTreeMT ${ROOT_LIBRARIES})

ADD_EXECUTABLE(runRDataFrame)
TARGET_SOURCES(runRDataFrame PRIVATE runRDataFrame.cpp)
TARGET_INCLUDE_DIRECTORIES(runRDataFrame PRIVATE ${ROOT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(runRDataFrame ${ROOT_LIBRARIES})

